Fixes horizontal overflowing.

--- a/mdot/static/mdot/css/desktop.less
+++ b/mdot/static/mdot/css/desktop.less
@@ -72,5 +72,5 @@
 }
 
 .mdot-footer {
-    hr { visibility: visible; }
+    hr { margin-top: 2em; visibility: visible; }
 }
