--- a/mdot/static/mdot/css/mobile.less
+++ b/mdot/static/mdot/css/mobile.less
@@ -32,9 +32,7 @@
     }
 }
 
-.sub-content {padding:0; background-color:#e8e3d3; }
-
-.mdot-sub-content { min-height: 100px; padding: 2em; color: @darkgray;
+.mdot-sub-content { min-height: 100px; padding-top: 2em; color: @darkgray; background: @lightgold;
 
     h3, h4 { font-size: 13px; letter-spacing: 1px; text-transform: uppercase; }
 
@@ -44,7 +42,7 @@
         }
     }
 
-    .mdot-dev-link { min-height:200px; margin-top: 3em; margin-right: 0; margin-bottom: -20px; margin-left: 0; color: #fff; text-align: left; 
+    .mdot-dev-link { min-height:200px; margin-top: 3em; margin-right: 0; margin-bottom: 0; margin-left: 0; color: #fff; text-align: left; 
         
         .mdot-dev-callout { position:absolute; bottom:20px; left:0; width: 80%; padding: 15px 20px; background-color: rgba(51, 0, 111, .9);  
             
@@ -57,13 +55,13 @@
 }
 
 
-.mdot-footer { font-size: 12px; line-height: 60px; color: @darkgray;
+.mdot-footer { font-size: 12px; line-height: 60px; color: @darkgray; background: @lightgold;
     .container { position:relative; }
     span { margin-left: 10px;
         a { display: inline-block; }
     }
 
-    hr { margin-top:40px; margin-bottom: 0; border-color: @gold; border-style: dotted; }
+    hr { margin-top:0; margin-bottom: 0; border-color: @gold; border-style: dotted; visibility: hidden; }
 }
 
 /*** sticky navigation ***/
